[project]
name = "gainpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vronst", email = "vronst@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gainpoint = "gainpoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
